change in post api fetching

--- a/src/app/create-post/create-post.component.html
+++ b/src/app/create-post/create-post.component.html
@@ -3,7 +3,7 @@
         <input class="form-control input shadow-none outline-none " [(ngModel)]="post" id="post" type="text"
             placeholder="Start a post about a topic that excites you.">
         <div class="text-center pt-1 ">
-            <button type="submit" (click)="onSubmit()" class="bt d-flex"><svg xmlns="http://www.w3.org/2000/svg"
+            <button type="submit" (click)="postData()" class="bt d-flex"><svg xmlns="http://www.w3.org/2000/svg"
                     class="d-flex align-items-center svg " viewBox="0 0 20 20" fill="currentColor">
                     <path
                         d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z" />
