Integrated api of user-profile

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -7,7 +7,7 @@
         </div>
         <div>
             <div class=" text-center">
-                <p class="pb-0 lh-1">Mitali Varshney <br> <small class="pt-0 p-2 lh-1" style="font-size: 11px; ">Student
+                <p class="pb-0 lh-1">{{userName}} <br> <small class="pt-0 p-2 lh-1" style="font-size: 11px; ">Student
                         at GLA University || Technical Trainee at Gemini Solutions</small>
                 </p>
                 <hr>
