--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,7 +21,7 @@
         <a href="#" class="nav-item nav-link">Notifications</a>
        
         <div class="dropdown d-flex align-items-center">
-          <a class=" d-flex align-items-center hidden-arrow" href="#" id="navbar" role="button"
+          <a class=" d-flex align-items-center hidden-arrow" href="/myProfile"  id="navbar" role="button"
             data-mdb-toggle="dropdown" aria-expanded="false">
             <img
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDUsrJVeiKaznE6uOjLIJSj5bMXvR1ovgCXw&usqp=CAU"
@@ -29,13 +29,13 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbar">
             <li>
-              <a class="dropdown-item" href="#">My profile</a>
+              <a class="dropdown-item">My profile</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#">Settings</a>
+              <a class="dropdown-item">Settings</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#">Logout</a>
+              <a class="dropdown-item" >Logout</a>
             </li>
           </ul>
         </div>
