--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="" style="position:fixed ; top: 0px; z-index:10; width: 100%;" >
+<div class="" style="position:fixed ; top: 0px; z-index:10; width: 100%;">
   <nav class="navbar navbar-expand-lg navbar-light ">
     <a href="#" class="navbar-brand">ZETRI<b>C</b></a>
     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -16,28 +16,28 @@
       </form>
       <div class="navbar-nav">
         <a href="" class="nav-item nav-link active">Timeline</a>
-        <button class="nav-item nav-link" (click)="logout()">Logout</button>
         <a href="#" class="nav-item nav-link ">Messaging</a>
         <a href="#" class="nav-item nav-link">Notifications</a>
-       
+
         <div class="dropdown d-flex align-items-center">
-          <a class=" d-flex align-items-center hidden-arrow" href="/myProfile"  id="navbar" role="button"
-            data-mdb-toggle="dropdown" aria-expanded="false">
-            <img
+          <div class="dropdown" >
+            <button id="drop" class="dropbtn"> </button>
+            <div id="myDropdown" class="dropdown-content"
+              style=" background-color: #f3f2ef; position: absolute; right: 10px;top: 10px; border:1px solid ;">
+              <a href="/myProfile" style="padding: 4px;border-bottom: 1px;">My Profile</a>
+              <a (click)="logout()" style="padding:4px ; cursor: pointer;">Logout</a>
+            </div>
+          </div>
+          <!-- <mat-form-field appearance="fill">
+            <mat-label> <img
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDUsrJVeiKaznE6uOjLIJSj5bMXvR1ovgCXw&usqp=CAU"
-              class="rounded-circle" height="25" alt="Black and White Portrait of a Man"  />
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbar">
-            <li>
-              <a class="dropdown-item">My profile</a>
-            </li>
-            <li>
-              <a class="dropdown-item">Settings</a>
-            </li>
-            <li>
-              <a class="dropdown-item" >Logout</a>
-            </li>
-          </ul>
+              class="rounded-circle" height="25" alt="Black and White Portrait of a Man"  /></mat-label>
+            <mat-select>
+              <mat-option value="one">First option</mat-option>
+              <mat-option value="two">Second option</mat-option>
+            </mat-select>
+          </mat-form-field>
+          -->
         </div>
 
       </div>
