--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,4 +1,4 @@
-<div class="container rounded bg-white mt-5 mb-5">
+<div class="container rounded bg-white mt-3 mb-5">
     <div class="row">
         <div class="col-sm-5 border-right">
             <div class="d-flex flex-column align-items-center text-center p-3 py-5">
@@ -35,8 +35,8 @@
 
                     </div>
                 </form>
-                <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Save
-                        Profile</button></div>
+                <!-- <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Save
+                        Profile</button></div> -->
             </div>
         </div>
     </div>
